# exam-parser

./: README.md  main.py  pyproject.toml
output/markdown/: page_1.md
output/markdown/page_1/: page_1_res.json
output/markdown/page_2/: page_2.md  page_2_res.json
output/markdown/page_3/: page_3.md  page_3_res.json
src/: main.py  paddle_parser.py  pdf_to_images.py  test_paddle.py
