[project]
name = "exam-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "paddleocr>=3.7.0",
    "paddlepaddle>=3.3.1",
    "pdf2image>=1.17.0",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.3",
    "requests>=2.34.2",
    "setuptools>=82.0.1",
    "torch>=2.10.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.25.0",
    "transformers==4.40.0",
]
